[package]
name = "rustls_async"
version = "0.1.1"
edition = "2024"
description = "An async TLS stream wrapper based on rustls and futures-io. / 一个基于 rustls 和 futures-io 的异步 TLS 流封装库。"
license = "MulanPSL-2.0"
repository = "https://github.com/i18n-fork/rustls_async"
keywords = ["async", "tls", "rustls", "futures", "security"]
categories = ["asynchronous", "network-programming"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustls = "0.23.32"
futures-io = "0.3.31"

[dev-dependencies]
blocking = "1.6.2"
async-io = "2.6.0"
async-executor = "1.13.3"
rustls-pemfile = "2.2.0"
webpki-roots = "1.0.2"
futures-lite = "2.6.1"
async-net = "2.0.0"
